# blog_web_api

./: .env.example  Cargo.toml  README.md
entity/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250814_010743_create_user_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  post_handler.rs  user_handler.rs
src/routes/middleware/: auth_middleware.rs
src/utils/: api_response.rs  constants.rs  jwt.rs
