[package]
name = "actix_web"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.142"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.4.0"
