[package]
name = "actix_web"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
actix-web = "4.11.0"
serde = "1.0.219"
serde_json = "1.0.142"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sha256 = "1.6.0" # for password hashing
chrono = "0.4.41" # for jwt time expiration
jsonwebtoken = "9.3.1" # for jwt configuration

actix-web-lab = "0.24.2" # for middleware
actix-multipart = "0.7.2" # for file uploads
sanitize-filename = "0.6.0" # for sanitizing filenames

[dependencies.uuid]
version = "1.18.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
